# plixlab

./: .gitignore  LICENSE  MANIFEST.in  README.md  cleanup_third_party.py  pyproject.toml  setup.py  t.py  verify.txt
.github/workflows/: deploy-docs.yml  docs.yml  publish.yml  test.yml
docs/: Makefile  requirements.txt  run.sh  started_backup.rst
docs/source/: 3D_model.rst  animations.rst  bio.rst  citation.rst  components.rst  conf.py  image.rst  import_example.py  index.rst  installation.md  installation.rst  markdown.rst  proteins.rst  python.rst  started.rst
docs/source/_static/: 4eVcaM3doj.plx  6bx0k84yWU.plx  embed.plx  index.html  plix.html
docs/source/_static/examples/: REPL.pkl  _animation.pkl  animation.pkl  bokeh.pkl  citation.pkl  citation_text.pkl  embed.pkl  example_1.pkl  example_3.pkl  example_4.pkl  (+14 more)
plix/: .plix.html  Bibliography.py  TODO  \  __init__.py  code.js  data.json  get_token.py  index.html  load.js  local_only.js  models.js  navigation.js  plix.py  plix_CLI.py  remote_server.py  render.js  serve.py  server.py  shape.py  styles.css  styles_old.css  utils.py
plix/assets/js/: load.js  navigation.js  plix.js
plix/examples/: example.py  markdown.pkl  pitch.py  run.html  run.py
plix/examples/assets/: biblio.bib
plixlab/: __init__.py  download_assets.py  plixlab.py  presentation.py  server.py  shape.py  slide.py  utils.py
plixlab/web/: index.html
tests/: run.py
tests/reference/: animation.plx  bokeh.plx  citation.plx  demo.plx  embed.plx  equation.plx  image.plx  logo.plx  markdown.plx  matplotlib.plx  model.plx  molecule.plx  multislide.plx  plotly.plx  python.plx  shape.plx  volcano.plx  welcome.plx  youtube.plx
web/: index.html
web/assets/js/: load.js  plix.js
(+13 files in other folders)
