[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plix"
version = "0.2"
description = "Interactive scientific presentations in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Giuseppe Romano", email = "romanog@mit.edu"}
]


[project.optional-dependencies]
docs = [
  "sphinx>=7",
  "sphinx-book-theme",
  "sphinx-copybutton"
]


dependencies = [
    "requests",
    "plotly",
    "matplotlib",
    "pytest",
    "pycairo",
    "bibtexparser",
    "hash_dict",
    "jsonpointer",
    "msgpack",
    "watchdog",
    "tornado",
    "jsonpatch",
    "dict_hash",
    "pandas",
    "bokeh==3.6.2",
    "numpy",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

